--- a/src/components/page-sections/about-me-section/about-me-section.module.scss
+++ b/src/components/page-sections/about-me-section/about-me-section.module.scss
@@ -25,9 +25,9 @@
         height: 25rem;
         width: 25rem;
         border-radius: 10px;
-        border-top-right-radius: 100px;
-        border-bottom-left-radius: 100px;
-        border-top-left-radius: 100px;
+        border-top-right-radius: 25%;
+        border-bottom-left-radius: 25%;
+        border-top-left-radius: 25%;
         box-shadow: var(--shadow-primary);
       }
 
@@ -54,6 +54,26 @@
       b {
         font-family: var(--font-bold);
       }
+    }
+  }
+}
+
+@media (max-width: 1240px) {
+  .mainContainer {
+    .sectionBodyContainer {
+      flex-direction: column;
+      align-items: center;
+
+      .textSectionContainer {
+        padding: 0;
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .mainContainer {
+    .sectionBodyContainer {
     }
   }
 }
