--- a/src/components/page-sections/portfolio-section/portfolio-section.module.scss
+++ b/src/components/page-sections/portfolio-section/portfolio-section.module.scss
@@ -40,3 +40,11 @@
     }
   }
 }
+
+@media (max-width: 1240px) {
+  .mainContainer {
+    .carrouselContainer {
+      padding: 5%;
+    }
+  }
+}
