--- a/src/components/page-sections/services-section/service-info/service-info.module.scss
+++ b/src/components/page-sections/services-section/service-info/service-info.module.scss
@@ -16,7 +16,7 @@
   }
 
   .title {
-    height: var(--spacing-xl);
+    height: 72px;
     font-family: var(--font-bold);
     color: var(--color-primary-dark-2);
   }
