--- a/src/styles/global-styles.scss
+++ b/src/styles/global-styles.scss
@@ -39,6 +39,15 @@
   --font-size-2xl: 2rem;
   --font-size-3xl: 3.5rem;
   --font-size-4xl: 4rem;
+  // --viewport-factor: 0.65898vw;
+  // --font-size-xs: calc(0.25rem + var(--viewport-factor));
+  // --font-size-s: calc(0.375rem + var(--viewport-factor));
+  // --font-size-m: calc(0.5rem + var(--viewport-factor)); // 16px / 1rem with a vw of 1214px;
+  // --font-size-l: calc(0.75rem + var(--viewport-factor));
+  // --font-size-xl: calc(1rem + var(--viewport-factor));
+  // --font-size-2xl: calc(1.5rem + var(--viewport-factor));
+  // --font-size-3xl: calc(2.75rem + var(--viewport-factor));
+  // --font-size-4xl: calc(3.25rem + var(--viewport-factor));
 
   // Sizing
   --icon-size: 1.5rem;
@@ -110,4 +119,16 @@ body {
   color: var(--color-text-gray);
   font-size: var(--font-size-m);
   letter-spacing: 3px;
+}
+
+@media (max-width: 1240px) {
+  :root {
+    --section-body-padding: 8rem var(--spacing-3xl);
+  }
+}
+
+@media (max-width: 768px) {
+  :root {
+    --section-body-padding: 8rem var(--spacing-s);
+  }
 }
